--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.3",
+    "classnames": "^2.3.1",
+    "framer-motion": "^3.7.0",
+    "gsap": "^3.7.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-parallax": "^3.3.0",
+    "react-reveal": "^1.2.2",
     "react-scripts": "4.0.1",
+    "react-scroll-effects": "^1.0.13",
+    "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
